finally done with the profile page in workers side, but this is open for revisions. the responsiveness of the page is fixed unlike last time

--- a/public/css/applicant/profile.css
+++ b/public/css/applicant/profile.css
@@ -111,6 +111,7 @@ body {
     backdrop-filter: blur(10px);
     position: relative;
     z-index: 2;
+    display: flex;
 }
 
 .back-btn:hover {
@@ -213,7 +214,7 @@ body {
     position: absolute;
     bottom: 5px;
     left: 2rem;
-    z-index: 20;
+    z-index: 1;
 }
 
 .profile-photo {
@@ -910,6 +911,7 @@ body {
         height: 50px;
     }
 
+
     #home {
         display: none;
     }
@@ -936,5 +938,9 @@ body {
     z-index: 9999 !important;
     background: #fff;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+}
+
+.bi{
+    display: inline;
 }
 }
